Use kwrk-dev@wfouche as load testing app